--- a/view/index.html
+++ b/view/index.html
@@ -13,14 +13,13 @@
 <body>
 <div id="wrap" class="ins">
     <!-- [D] 모바일 일 때 .is-active 추가 -->
-    <header class="header is-active">
+    <header class="header">
       <div class="ins__inner">
         <h1 class="header__home">
           <a href="#" class="header__link">
             <span class="blind">NAVER I&amp;S</span>
           </a>
         </h1>
-        <!-- pc 메뉴 -->
         <div class="menu-pc">
           <nav class="navigation">
             <ul class="navigation__list">
@@ -51,7 +50,7 @@
         <button class="menu-mo__button">
           <span class="blind">모바일 메뉴 열기</span>
         </button>
-        <!-- [D] 햄버거 버튼 클릭 시 .is-active 추가 -->
+        <!-- [D] 햄버거 버튼 클릭 시 ins 클래스에 is-active 추가 -->
         <div class="menu-mo">
             <h2 class="menu-mo__home">
               <a href="#" class="menu-mo__link">
@@ -84,16 +83,16 @@
         <div class="swiper">
           <div class="swiper-wrapper">
             <div class="swiper-slide">
-              <img src="../images/pc_kv_img_01.png" class="swiper-img" alt="" />
+              <img src="../image/pc_kv_img_01.png" class="swiper-img" alt="" />
               <p class="swiper__desc">직원과 가장 가까이에서<br class="br-mo"> 직접 소통하며<br class="br-pc">더 나은 업무 환경과<br class="br-mo"> 직원서비스를 만듭니다.</p>
             </div>
             <div class="swiper-slide">
               <p class="swiper__desc">직원의 일상 생활<br class="br-mo"> 모든 곳에<br class="br-pc">우리의 손길이<br class="br-mo"> 닿아 있습니다.</p>
-              <img src="../images/pc_kv_img_02.png" class="swiper-img" alt="" />l
+              <img src="../image/pc_kv_img_02.png" class="swiper-img" alt="" />l
             </div>
             <div class="swiper-slide">
               <p class="swiper__desc">임직원의 목소리에서<br>우리 일의 자부심과<br class="br-mo"> 무게를 느낍니다.</p>
-              <img src="../images/pc_kv_img_03.png" class="swiper-img" alt="" />
+              <img src="../image/pc_kv_img_03.png" class="swiper-img" alt="" />
             </div>
           </div>
           <div class="swiper-wrap">
@@ -212,28 +211,28 @@
             <li class="service__item">
               <a href="#" class="service__link" role="button">
                 <h4 class="service__title">Employee<br>Service</h4>
-                <img src="../images/pc_employee-service_img.png" alt="">
+                <img src="../image/pc_employee-service_img.png" alt="">
                 <span class="service__button">더보기</span>
               </a>
             </li>
             <li class="service__item">
               <a href="#" class="service__link" role="button">
                 <h4 class="service__title">Space &amp; Facility<br>Service</h4>
-                <img src="../images/pc_space-&-facility-service.png" alt="">
+                <img src="../image/pc_space-&-facility-service.png" alt="">
                 <span class="service__button">더보기</span>
               </a>
             </li>
             <li class="service__item">
               <a href="#" class="service__link" role="button">
                 <h4 class="service__title">Finance / Procurement<br>Service</h4>
-                <img src="../images/pc_finance-procurement-service_img.png" alt="">
+                <img src="../image/pc_finance-procurement-service_img.png" alt="">
                 <span class="service__button">더보기</span>
               </a>
             </li>
             <li class="service__item">
               <a href="#" class="service__link" role="button">
                 <h4 class="service__title">Architecture &amp;<br>Space Experience Service</h4>
-                <img src="../images/architecture-&-space-Experience-service_img.png" alt="">
+                <img src="../image/architecture-&-space-Experience-service_img.png" alt="">
                 <span class="service__button">더보기</span>
               </a>
             </li>
